change id of routeMeta from integer to long